# eudaq

./: .gitignore
.travis/: install_pxar.sh
cmake/: FindDRS.cmake  FindROOT.cmake
main/exe/: CMakeLists.txt
main/include/eudaq/: CMSPixelHelper.hh
main/lib/plugins/: AlibavaConverterPlugin.cc  RPiConverterPlugin.cc
producers/: CMakeLists.txt
producers/alibava/: CMakeLists.txt
producers/alibava/include/: AlibavaProducer.hh
producers/alibava/src/: AlibavaProducer.cxx
producers/cmspixel/: CMakeLists.txt
producers/cmspixel/src/: CMSPixelConfigParser.cxx
producers/drs4/: CMakeLists.txt  Makefile  cmake_install.cmake
producers/drs4-evaluationboard/include/: DRS4Producer.hh
producers/drs4-evaluationboard/src/: DRS4Producer.cxx
producers/drs4/include/: DRS4Producer.hh
producers/drs4/src/: DRS4Producer.cxx
producers/example/: CMakeLists.txt
producers/example/src/: ExampleHardware.cc  ExampleProducer.cxx
producers/rpi-producer/: CMakeLists.txt
producers/rpi-producer/include/: RPiProducer.hh
producers/rpi-producer/src/: RPiProducer.cxx
user/timepix3/module/src/: Timepix3Producer.cxx
